--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
         <section class="container my-5">
             <div class="row g-4">
                   <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border bg-warning d-flex align-items-center d-flex justify-content-between rounded-3">
+                    <div class=" p-3 watch d-flex align-items-center d-flex justify-content-between rounded-3">
                         <h1 class="text-white"> Watch</h1>
-                        <img src="images/categories/watch.png" alt="">
+                        <img class="categorie-img" src="images/categories/watch.png" alt="">
                     </div>
                   </div>
                   <div class="col-lg-4 col-md-6 col-12">
                     <div id="bgn-bag" class="p-3 border d-flex align-items-center d-flex justify-content-between rounded-3">
                         <h1 class="text-white"> Bag</h1>
-                        <img src="images/categories/bag.png" alt="">
+                        <img class="categorie-img" src="images/categories/bag.png" alt="">
                     </div>
                   </div>
                   <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 border bg-primary d-flex align-items-center d-flex justify-content-between rounded-3">
                         <h1 class="text-white"> Watch</h1>
-                        <img src="images/categories/shoes.png" alt="">
+                        <img class="categorie-img" src="images/categories/shoes.png" alt="">
                     </div>
                   </div>
                 </div>
