--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   </div>
                   <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 border bg-primary d-flex align-items-center d-flex justify-content-between rounded-3">
-                        <h1 class="text-white"> Watch</h1>
+                        <h1 class="text-white"> Shoes</h1>
                         <img class="categorie-img" src="images/categories/shoes.png" alt="">
                     </div>
                   </div>
