--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
    <main>
         <section class="container my-5">
             <div class="row g-4">
-                  <div class="col-lg-4 col-md-6 col-12">
+                  <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                     <div class=" p-3 watch d-flex align-items-center d-flex justify-content-between rounded-3">
                         <h1 class="text-white"> Watch</h1>
                         <img class="categorie-img" src="images/categories/watch.png" alt="">
                     </div>
                   </div>
-                  <div class="col-lg-4 col-md-6 col-12">
+                  <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                     <div id="bgn-bag" class="p-3 border d-flex align-items-center d-flex justify-content-between rounded-3">
                         <h1 class="text-white"> Bag</h1>
                         <img class="categorie-img" src="images/categories/bag.png" alt="">
                     </div>
                   </div>
-                  <div class="col-lg-4 col-md-6 col-12">
+                  <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                     <div class="p-3 shoes d-flex align-items-center d-flex justify-content-between rounded-3">
                         <h1 class="text-white"> Shoes</h1>
                         <img class="categorie-img" src="images/categories/shoes.png" alt="">
@@ -120,7 +120,7 @@
 
         <section class="container" id="Shoes">
             <h2>Shoes</h2>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                   <div class="card border-0 shadow-lg h-100">
                     <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -165,7 +165,7 @@
 
         <section class="container my-5" id="Backpack">
             <h2>Backpack</h2>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                   <div class="card border-0 shadow-lg h-100">
                     <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
